[package]
name = "vinofyi"
version = "0.1.1"
edition = "2021"
authors = ["FYIPedia"]
description = "Wine encyclopedia with grapes, regions, and food pairings — async API client for vinofyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/vinofyi-rs"
homepage = "https://vinofyi.com"
documentation = "https://docs.rs/vinofyi"
readme = "README.md"
keywords = ["wine", "grape", "region", "pairing", "sommelier"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
